# azure-realtime-rides-pipeline

./: .bandit  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-ci.yml
.trunk/: trunk.yaml
data/sample/: bulk_rides.json
databricks/: 01_ingest_eventhub.py  02_bronze_to_silver.py  03_silver_obt.sql  04_star_schema.py
src/realtime_rides/: __init__.py  app.py  eventhub_client.py  ride_generator.py  settings.py
templates/: confirmation.html  home.html
tests/: test_ride_generator.py
