[project]
name = "azure-realtime-rides-pipeline"
version = "0.1.0"
description = "Portfolio project for streaming ride events into Azure Event Hubs and modelling them in Databricks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-eventhub>=5.12.0",
    "faker>=25.0.0",
    "fastapi>=0.110.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"databricks/*.py" = ["F821"]

[tool.bandit]
skips = [
    "B101", # pytest uses assert statements by design.
    "B311", # ride_generator uses non-cryptographic randomness for synthetic demo data only.
]
